--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             It's available for public use but not a necessity in every day life (although
             some may disagree).
         </p>
-        <p>Here are some sketches of the main screens a user would see while ordering:</p>
+        <p>Here are sketches of the main screens a user sees while ordering:</p>
         <div class="container">
             <div class="storyboard-panel">
                 <img class="interface-sketch" src="./assets/interface/IMG_0067.jpeg">
@@ -29,7 +29,7 @@
             <div class="storyboard-panel">
                 <img class="interface-sketch" src="./assets/interface/IMG_0068.jpeg">
                 <p>
-                    Screen 2. Continuous scroll to browse menu. Users can also filter,
+                    Screen 2. Continuous scroll to browse menu. Users can filter,
                     search, and see item info here. They can also access their cart using
                     the ever-present blue button.
                 </p>
@@ -37,17 +37,17 @@
             <div class="storyboard-panel">
                 <img class="interface-sketch" src="./assets/interface/IMG_0069.jpeg">
                 <p>
-                    Screen 3. Shows all the items in the user's cart along with
-                    customizations and running total. Lets users edit their cart and also
+                    Screen 3. Shows all the items in the user's cart along with a
+                    customizations and running total. Lets users edit their cart and
                     continue browsing items.
                 </p>
             </div>
             <div class="storyboard-panel">
                 <img class="interface-sketch" src="./assets/interface/IMG_0070.jpeg">
                 <p>
-                    Screen 4. Prompts the user to pay using the card reader. No on-screen
-                    interactive components, but the user does need to use the card reader
-                    located below the screen.
+                    Screen 4. Prompts the user to pay using the card reader. Interactive
+                    component switches from the touch pad to the card reader located below
+                    the screen.
                 </p>
             </div>
         </div>
@@ -59,12 +59,11 @@
                 Interview Questions
                 <p class="answer">
                     It seemed like most people going to Ten One were either picking up
-                    an order or ordering from the kiosk, skipping the in person interaction
+                    a Snackpass order or ordering from the kiosk, skipping the in-person interaction
                     entirely.
                 </p>
                 <p class="answer">
-                    For all interviewees who agreed to give feedback,
-                    I asked the following questions:
+                    For all interviewees who agreed to give feedback, I asked the following questions:
                 </p>
                 <ul class="answer">
                     <li>How was your experience navigating the order screen?</li>
